# DevSync-deploy

./: LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/devsync/: .dockerignore  .env.template  Dockerfile  requirements.txt
backend/devsync/api/: metrics.py  service.py  tasks.py  urls.py  views.py
backend/devsync/config/: asgi.py  celery.py  logging_handlers.py  middleware.py  settings.py  urls.py
backend/devsync/notifications/: admin.py  consumers.py  middleware.py  models.py  renderers.py  serializers.py  tasks.py  urls.py  views.py
backend/devsync/projects/: admin.py  apps.py  exceptions.py  filters.py  models.py  paginators.py  permissions.py  renderers.py  services.py  urls.py
backend/devsync/roles/: admin.py  models.py  renderers.py  serializers.py  validators.py  views.py
backend/devsync/users/: admin.py  filters.py  middleware.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  throttling.py  urls.py  views.py
backend/devsync/voting/: admin.py  filters.py  models.py  paginators.py  permissions.py  renderers.py  serializers.py  tests.py  urls.py  views.py
backend/metrics/: prometheus.yml
backend/pgbouncer/: pgbouncer.ini
frontend/: index.html  package-lock.json  package.json  test.http
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: AuthService.tsx  CreateProjectService.tsx  InvitationService.tsx  NotificationService.tsx  TaskService.tsx  UseWebSocketNotifications.tsx  UserService.tsx  VoitingService.tsx
nginx/: Dockerfile  nginx.conf
nginx/ssl/: certificate.crt  fullchain.pem
(+142 files in other folders)
